RESOLVED FIXED286104
Log UTI causing release asserts in WebCore::preferredExtensionForImageType()
https://bugs.webkit.org/show_bug.cgi?id=286104
Summary Log UTI causing release asserts in WebCore::preferredExtensionForImageType()
David Kilzer (:ddkilzer)
Reported 2025-01-16 15:49:12 PST
Log the UTI string causing release asserts in WebCore::preferredExtensionForImageType().
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-16 15:49:33 PST
David Kilzer (:ddkilzer)
Comment 2 2025-01-16 15:53:35 PST
EWS
Comment 3 2025-01-16 19:16:30 PST
Committed 289036@main (b0385a857371): <https://commits.webkit.org/289036@main> Reviewed commits have been landed. Closing PR #39156 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.