Log UTI causing release asserts in WebCore::preferredExtensionForImageType() <https://bugs.webkit.org/show_bug.cgi?id=286104> <rdar://143084261>

Reviewed by Wenson Hsieh.

* Source/WebCore/platform/graphics/cg/UTIRegistry.mm:
(WebCore::preferredExtensionForImageType):
- Replace RELEASE_ASSERT() with code to log the UTI causing issues.

Canonical link: https://commits.webkit.org/289036@main